k8s/init/dashboard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard-ingress
  namespace: kubernetes-dashboard
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "true" # Chuyển hướng sang HTTPS
    nginx.ingress.kubernetes.io/use-regex: "true" # Cho phép sử dụng regex trong đường dẫn
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - k8s.dinhkhoile.com # Domain cho TLS
      secretName: kubernetes-dashboard-tls # Tên Secret chứa chứng chỉ TLS
  rules:
    - host: k8s.dinhkhoile.com
      http:
        paths:
          - path: /dashboard(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: kubernetes-dashboard-web # Service của Kubernetes Dashboard
                port:
                  number: 8000 # Port của Service
